--- a/src/pages/catalog/index.html
+++ b/src/pages/catalog/index.html
@@ -2,27 +2,99 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="style.css" rel="stylesheet" />
-    <link href="/common.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link rel="stylesheet" href="/static/fonts/oswald.css" />
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <title>Каталог</title>
+    <title>Contact us</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
+    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     @@include('header/index.html')
-    <main class="catalog-main">
-      <div class="container">
-        <h1 class="title-block title-block_one">Каталог</h1>
-        <h2 class="title-block title-block_two">
-          Вы находитесь на странице каталога
-        </h2>
+    <main class="category-products container">
+      <h1 class="category-title">Category Products</h1>
+      <div class="products-breadcrumbs">
+        <ol class="breadcrumbs hidden-marker ">
+          <li>
+            <a class="breadcrumbs-item" href="/index.html"> Home </a>
+          </li>
+          <li>
+            <img class="breadcrumbs-item" src="/static/images/bread.svg" alt="&#62;">
+          </li>
+          <li class="breadcrumbs-item active">Catalog </li>
+        </ol>
       </div>
+      <section class="category">
+        <h2 class="visually-hidden"> Category Products </h2>
+        <div class="container">
+          <div class="category-list">
+            <ul class="list hidden-marker">
+              <li class="category-item background-first">
+                <a class="category-link" href="#">
+                  <img class="category-img" src="/static/images/category-1.jpg" alt="APPAREL KIDS" width="280"
+                    height="270">
+                  <div class="category-text">Apparel kids</div>
+                </a>
+              </li>
+              <li class="category-item background-second">
+                <a class="category-link" href="#">
+                  <img class="category-img" src="/static/images/category-2.jpg" alt="HOLIDAY SHOP" width="280"
+                    height="270">
+                  <div class="category-text">Holiday shop </div>
+                </a>
+              </li>
+              <li class="category-item background-third">
+                <a class="category-link" href="./../Toys/index.html">
+                  <img class="category-img" src="/static/images/category-3.jpg" alt="TOYS" width="280" height="270">
+                  <div class="category-text">Toys</div>
+                </a>
+              </li>
+              <li class="category-item background-fourth">
+                <a class="category-link" href="#">
+                  <img class="category-img" src="/static/images/category-4.jpg" alt="ACCESSORIES" width="280"
+                    height="270">
+                  <div class="category-text">Accessories</div>
+                </a>
+              </li>
+              <li class="category-item background-fifth">
+                <a class="category-link" href="#">
+                  <img class="category-img" src="/static/images/category-5.jpg" alt="SALE" width="280" height="270">
+                  <div class="category-text">Sale</div>
+                </a>
+              </li>
+              <li class="category-item background-sixth">
+                <a class="category-link" href="#">
+                  <img class="category-img" src="/static/images/category-6.jpg" alt="APPAREL ADULTS" width="280"
+                    height="270">
+                  <div class="category-text">Apparel adults</div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <div class="product-description">
+          <h2 class="category-title description">Product Description </h2>
+          <div class="descriprion-text">
+            Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even
+            bathe her, just like a little sister.
+          </div>
+          <div class="descriprion-text">
+            A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an
+            excellent choice for a gift for a girl from 4 years old.
+          </div>
+          <div class="descriprion-text text-margin">
+            The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins
+            and
+            elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.
+          </div>
+        </div>
+      </section>
     </main>
     @@include('footer/index.html')
   </body>
-  <script src="index.js"></script>
-</html>
+  </html>
