--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -1,43 +1,201 @@
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="style.css" rel="stylesheet" />
-    <link href="/common.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link rel="stylesheet" href="/static/fonts/oswald.css" />
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400i,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="style.css">
     <title>Главная</title>
   </head>
   <body>
     @@include('header/index.html')
-    <main class="index-main">
-      <div class="container">
-        <h1 class="title-block title-block_one">Главная</h1>
-        <h2 class="title-block title-block_two">
-          Вы находитесь на главной странице
-        </h2>
-        <div class="parallax-card">
-          <div class="parallax-card__wrapper-img">
-            <img
-              class="parallax-card__img"
-              src="static/images/cactus.jpg"
-              alt="Картинка кактуса"
-            />
+    <main class="category">
+      <h1 class="visually-hidden"> Main DLK's page. Main category products. Delivery. Contact. </h1>
+      <section class="poster">
+        <h2 class="visually-hidden"> Slider with the most popular DLK's products </h2>
+        <div class="container">
+          <div class="slider-popular"> 
+            <div class="poster-title"> THE OOH NOO COLLECTION </div>
+            <div class="poster-text"> Designed in Slovenia </div>
+            <div class="poster-page"> 01 </div>
+            <div class="poster-buttons">
+              <button class="poster-button active-block"> </button>
+              <button class="poster-button"> </button>
+              <button class="poster-button"> </button>
+              <button class="poster-button"> </button>
+            </div>
+            @@include('button/index.html',{
+              "text": "EXPLORE NOW",
+              "class": "poster-link poster-link-js"
+            })
+            <img class="poster-img" src="/static/images/poster.png" alt="POSTER" width="636" height="461">
+            <div class="underpost-text">
+            Free (continental) USA shipping on all orders of $100 USD or more!
+            </div>
           </div>
-
-          <div class="parallax-card__description">
-            <p class="parallax-card__paragraph">Кактус маминой подруги</p>
-            <p class="parallax-card__paragraph">
-              Не нужно поливать и никогда не сохнет
+        </div>
+      </section>
+      <section class="categories">
+        <h2 class="section-title category-title container">Category Products</h2>
+        <div class="container">
+          <div class="main-category-product"> 
+          <ul class="hidden-marker category-list">
+            <li class="category-item background-first">
+              <a class="category-link" href="#">
+                <img class="category-img" src="/static/images/category-1.jpg" alt="APPAREL KIDS"  width="280" height="270">
+                <div class="category-text"> Apparel kids </div>
+              </a>
+            </li>
+            <li class="category-item background-second">
+              <a class="category-link" href="#">
+                <img class="category-img" src="/static/images/category-2.jpg" alt="HOLIDAY SHOP" width="280" height="270">
+                <div class="category-text"> Holiday shop </div>
+              </a>
+            </li>
+            <li class="category-item background-third">
+              <a class="category-link" href="./pages/Toys/index.html">
+                <img class="category-img" src="/static/images/category-3.jpg" alt="TOYS" width="280" height="270">
+                <div class="category-text">Toys</div>
+              </a>
+            </li>
+            <li class="category-item background-fourth">
+              <a class="category-link" href="#">
+                <img class="category-img" src="/static/images/category-4.jpg" alt="ACCESSORIES" width="280" height="270">
+                <div class="category-text"> Accessories </div>
+              </a>
+            </li>
+          </ul>
+          </div>
+          <div class="category-button">
+            <button class="button-list">
+              <img class="button-change" src="/static/images/back.svg" alt="back">
+            </button>
+            <button class="button-list">
+              <img class="button-change" src="/static/images/next.svg" alt="next">
+            </button>
+            <p class="button-text under-category-text">
+          Modern finds for the modern home. Curated goods by unique designers around the world
+          from fashion to furniture for kids and adults.
             </p>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="main-delivery container">
+        <h2 class="visually-hidden">DELIVERY</h2>
+        <img class="delivery-img background-fifth" src="/static/images/delivery.jpg" alt="delivery" width="480" height="559">
+        <div class="dilevery-block">
+          <div class="section-title delivery-title"> Delivery</div>
+          <div class="main-delivey-button">
+            <button class="delivery-button-delivery">Delivery </button>
+            <button class="delivery-button margin-delivery">Guarantee </button>
+            <button class="credit-button">Credit </button>
+          </div>
+          <p class="button-text delivery-text">
+            Some days i feel like i've been working on dlk my entire life and there are other days that i am completely
+            shocked that four years have flown by. It's simply magical.
+          </p>
+          <p class="button-text delivery-text ">
+            What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy
+            place for me and i have you and all of the beautiful designers that we work with to thank!
+          </p>
+          @@include('link/index.html',{
+            "text": "LEARN MORE",
+            "class": "button-section"
+          })
+        </div>
+      </section>
+      <section class="partners container">
+        <h2 class="visually-hidden"> partners</h2>
+        <ul class="hidden-marker partners-list">
+          <li class="partners-item">
+            <a class="partner-link" href="#">
+              <img class="mail-img" src="/static/images/mail.jpg" alt="mail" width="193" height="60">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partner-link" href="#">
+              <img class="mail-img" src="/static/images/apple.jpg" alt="apple" width="179" height="61">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partner-link" href="#">
+              <img class="mail-img" src="/static/images/eltex.jpg" alt="eltex" width="216" height="46">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partner-link" href="#">
+              <img class="mail-img" src="/static/images/owox.jpg" alt="owox" width="211" height="40">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <div class=" aboutUs-contacts container">
+        <div class="aboutUs-contacts-article">
+          <article class="aboutUs">
+            <h2 class="section-title dlk-title">Design Life Kids</h2>
+            <div class="delivery-button aboutUs-title"> About Us</div>
+            <p class="button-text aboutUs-text">
+              Some days i feel like i've been working on dlk my entire life and there are other days
+              that i am completely shocked that four years have flown by. It's simply magical.
+            </p>
+            @@include('link/index.html',{
+              "text": "buy now",
+              "class": "button-article"
+            })
+          </article>
+          <article class="contacts">
+            <h2 class="section-title contacts-title"> Contacts </h2>
+            <p class="button-text contacts-text">
+              Some days i feel like i've been working on dlk my entire life and there are other days
+              that i am completely shocked that four years have flown by. It's simply magical.
+            </p>
+            <div class="map"> 
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4459.84226807081!2d-122.42473714595597!3d37.77633472796363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sTwitter!5e0!3m2!1sru!2sru!4v1582133954039!5m2!1sru!2sru">
+              </iframe>
+            </div>
+          </article>
+        </div>
+        </div>
     </main>
     @@include('footer/index.html')
-  </body>
-  <script src="script.js"></script>
+    <div class="modal-form modal-form-none modal-form-js">
+      <form class="modal-form-window" action="https://form-data-dl.herokuapp.com/api/messages" method="POST">
+        <div class="form-column-100">
+          <label class="form-label" for="input-name"> Name </label>
+          <input class="form-input form-input-js" name="name" id="input-name" type="text">
+        </div>
+        <div class="form-row">
+          <div class="form-column">
+            <label class="form-label" for="input-phone"> Phone </label>
+            <input class="form-input" name="phone" id="input-phone" type="tel">
+          </div>
+          <div class="form-column">
+            <label class="form-label" for="input-mail"> Email </label>
+            <input class="form-input" name="email" id="input-mail" type="text">
+          </div>
+        </div>
+        <div class="form-textarea">
+          <label class="form-label" for="input-massage"> Message </label>
+          <textarea class="textarea-massage" name="message" id="input-massage" cols="30" rows="10" style="max-width:600px;"> </textarea>
+        </div>
+        <fieldset class="form-click">
+          <label class="checkbox form-label">
+            <input class="checkbox-margin form-input visually-hidden" name="accept" type="checkbox">
+            <span class="checkbox-indicator"> </span>
+            <span class="filter-item-text"> By clicking on the button, you consent to the processing of your personal data </span>
+          </label>
+        </fieldset>
+      @@include('button/index.html',{
+          "text": "Submit",
+          "class": "modal-form-button"
+      })
+        <button class="modal-form-x modal-form-x-js" type="button"> 
+          <img src="/static/images/x.png" alt="X"> </button>
+      </form>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
